--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,24 @@
 [tool.poetry]
-name = "myproject"
+name = "workshop"
 version = "0.1.0"
 description = ""
 authors = ["luca-capone <58292893+luca-capone@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
 markdown = "^3.5.1"
+markdown-callouts = "^0.3.0"
 mkdocs = "^1.5.3"
+mkdocs-material = "^9.5.3"
+mkdocs-material-extensions = "^1.3.1"
+mkdocs-minify-plugin = "^0.7.2"
+mkdocs-redirects = "^1.2.1"
+mkdocs-section-index = "^0.3.8"
+pygments = "^2.17.2"
+pymdown-extensions = "^10.7"
+python = "^3.12"
 ruff = "^0.1.11"
 types-markdown = "^3.5.0.20240106"
-mkdocs-material-extensions = "^1.3.1"
-pymdown-extensions = "^10.7"
-mkdocs-material = "^9.5.3"
-markdown-callouts = "^0.3.0"
-mkdocs-section-index = "^0.3.8"
 
 
 [build-system]
