--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^2.2.1"
 scipy = "^1.12.0"
 scikit-learn = "^1.4.1.post1"
 
+
 [tool.poetry.group.dev.dependencies]
 black = "*"
 codespell = "*"
@@ -30,8 +31,10 @@ mkdocs-jupyter = "^0.24.6"
 mkdocs-material = "^9.5.3"
 mkdocs-material-extensions = "^1.3.1"
 mkdocs-minify-plugin = "^0.7.2"
+mkdocs-print-site-plugin = "^2.3.6"
 mkdocs-redirects = "^1.2.1"
 mkdocs-section-index = "^0.3.8"
+mkdocs-with-pdf = "^0.9.3"
 pygments = "^2.17.2"
 pymdown-extensions = "^10.7"
 types-markdown = "^3.5.0.20240106"
