--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,3 +35,10 @@ repos:
         entry: poetry run python3 scripts/create_exercises.py
         language: system
         files: ^docs/notebooks/solutions/.*\.ipynb$
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.8.2
+    hooks:
+    - id: poetry-check
+    - id: poetry-lock
+    - id: poetry-export
+    - id: poetry-install
